Решить две задачи урока Привет мир! и добавить урок черновик в Readme

--- a/Tasks/I-Javascript-Fundamentals/task-1.html
+++ b/Tasks/I-Javascript-Fundamentals/task-1.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-
-<html>
+<html style="font-size: 2vh;">
+<head>
+  <title>Первая задача в learn.javascript.ru</title>
+</head>
+<body>
+  <header>
     <h1>Первая задача в learn.javascript.ru</h1>
-    <script>
-        function introduction() {
-            alert('Я Javasacript!');
-        }
+    <h2>Вызвать alert</h2>
+    <p><strong>Важность: 5</strong></p>
+  </header>
 
-        introduction();
-    </script>
+  <section>
+    <h3>Задача:</h3>
+    <p>Создайте страницу, которая отобразит сообщение «Я JavaScript!».</p>
+    <p>Выполните это задание в песочнице, либо на вашем жёстком диске, где – неважно, главное – проверьте, что она работает.</p>
+  </section>
+
+  <section>
+    <h3>Решение:</h3>
+    <pre><code>
+function introduction() {
+  alert('Я JavaScript!');
+}
+
+introduction();
+    </code></pre>
+  </section>
+
+  <script>
+
+  </script>
+</body>
 </html>
 
 <!-- 
